	  - Bumped version to 3.2.1.
	* Version 3.2.1 has been released.

2012.03.30 Kentaro FUKUCHI <kentaro@fukuchi.org>
	* libqrencode.pc.in :
	  - Replaced obsolete macro LIBPTHREAD with LIBS. (thx to gniibe)
	* configure.ac:
	  - Checks $ac_cv_lib_pthread_pthread_mutex_init instead of
	    HAVE_LIBPTHREAD. (thx to gniibe)

2011.11.26 Kentaro FUKUCHI <kentaro@fukuchi.org>
	[3.2.0]
	* Version 3.2.0 has been released.

2011.11.23 Kentaro FUKUCHI <kentaro@fukuchi.org>
	[3.2.0]
	* qrencode.1.in:
	  - Added descriptions of "-d" and "-M".

2011.11.3 Kentaro FUKUCHI <kentaro@fukuchi.org>
	[3.2.0]
	* tests/view_qrcode.c:
	  - Messages improved.
	* mmask.c:
	  - A bug in mask evaluation function has been eliminatd.
	* tests/test_mmask.c:
	  - New test case has been added.
	* qrenc.c:
	  - Micro QR Code support is now marked as "experimental" explicitly.
	* tests/test_qrinput.c, tests/test_qrencode.c:
	  - Added some test cases.

2011.10.23 Kentaro FUKUCHI <kentaro@fukuchi.org>
	[3.2.0]
	* 3.2 branch has been started.
	* README, NEWS, configure.ac:
	  - Version number changes.
	  - Micro QR Code support is now marked as "experimental" explicitly.

2011.10.23 Kentaro FUKUCHI <kentaro@fukuchi.org>
	* mask.c, mmask.c, tests/common.h:
	  - Eliminated unused valiables.
	* tests/test_qrencode.c:
	  - Some assertions added.

2011.10.18 Kentaro FUKUCHI <kentaro@fukuchi.org>
	* test/test_mask.c:
	  - To call QRspec_clearCache() at exit.

2011.10.17 Kentaro FUKUCHI <kentaro@fukuchi.org>
	* configure.ac:
	  - Now the latest PNG library is chosen when the configure script is
	    executed.
	* Copyright year has been updated.

2011.10.17 Kentaro FUKUCHI <kentaro@fukuchi.org>
	* mask.c:
	  - Unneeded zero-clear has been eliminated from Mask_calcRunLength().
	  - A rounding-down error in N4 calculation has been fixed.
	    (Thanks to Adam Shepherd)
	* tests/test_mask.c:
	  - Fixed some test cases.

2011.10.17 Kentaro FUKUCHI <kentaro@fukuchi.org>
	* mask.c: